front/src/style/_main.scss
/*

███████╗███████╗███╗   ███╗ █████╗ ███╗   ██╗████████╗██╗ ██████╗    ██╗   ██╗██╗
██╔════╝██╔════╝████╗ ████║██╔══██╗████╗  ██║╚══██╔══╝██║██╔════╝    ██║   ██║██║
███████╗█████╗  ██╔████╔██║███████║██╔██╗ ██║   ██║   ██║██║         ██║   ██║██║
╚════██║██╔══╝  ██║╚██╔╝██║██╔══██║██║╚██╗██║   ██║   ██║██║         ██║   ██║██║
███████║███████╗██║ ╚═╝ ██║██║  ██║██║ ╚████║   ██║   ██║╚██████╗    ╚██████╔╝██║
╚══════╝╚══════╝╚═╝     ╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝   ╚═╝   ╚═╝ ╚═════╝     ╚═════╝ ╚═╝

  Import this file into your LESS project to use Semantic UI without build tools
*/

// Those fomantic-ui-css/*.scss don't exist in the package, but we create them
// via scripts/link-scss-files.sh on postinstall, so we can include theme
// under a class namespace

/* Global */
@import "~fomantic-ui-css/components/reset.css";
// we use our custom site css here to avoid loading google font
@import "./site";

/* Elements */
@import "~fomantic-ui-css/components/button.css";
@import "~fomantic-ui-css/components/container.css";
@import "~fomantic-ui-css/components/divider.css";
// @import "~fomantic-ui-css/components/flag.css";
@import "~fomantic-ui-css/components/header.css";
@import "~fomantic-ui-css/components/icon.css";
@import "~fomantic-ui-css/components/image.css";
@import "~fomantic-ui-css/components/input.css";
@import "~fomantic-ui-css/components/label.css";
@import "~fomantic-ui-css/components/list.css";
@import "~fomantic-ui-css/components/loader.css";
@import "~fomantic-ui-css/components/placeholder.css";
// @import "~fomantic-ui-css/components/rail.css";
// @import "~fomantic-ui-css/components/reveal.css";
@import "~fomantic-ui-css/components/segment.css";
@import "~fomantic-ui-css/components/step.css";

/* Collections */
// @import "~fomantic-ui-css/components/breadcrumb.css";
@import "~fomantic-ui-css/components/form.css";
@import "~fomantic-ui-css/components/grid.css";
@import "~fomantic-ui-css/components/menu.css";
@import "~fomantic-ui-css/components/message.css";
@import "~fomantic-ui-css/components/table.css";

/* Views */
// @import "~fomantic-ui-css/components/ad.css";
@import "~fomantic-ui-css/components/card.css";
// @import "~fomantic-ui-css/components/comment.css";
@import "~fomantic-ui-css/components/feed.css";
@import "~fomantic-ui-css/components/item.css";
@import "~fomantic-ui-css/components/statistic.css";

/* Modules */
// @import "~fomantic-ui-css/components/accordion.css";
@import "~fomantic-ui-css/components/checkbox.css";
@import "~fomantic-ui-css/components/dimmer.css";
@import "~fomantic-ui-css/components/dropdown.css";
// @import "~fomantic-ui-css/components/embed.css";
@import "~fomantic-ui-css/components/modal.css";
// @import "~fomantic-ui-css/components/nag.css";
@import "~fomantic-ui-css/components/popup.css";
@import "~fomantic-ui-css/components/progress.css";
// @import "~fomantic-ui-css/components/rating.css";
@import "~fomantic-ui-css/components/search.css";
// @import "~fomantic-ui-css/components/shape.css";
@import "~fomantic-ui-css/components/sidebar.css";
@import "~fomantic-ui-css/components/sticky.css";
@import "~fomantic-ui-css/components/tab.css";
@import "~fomantic-ui-css/components/transition.css";



// we do the import here instead in main.js
// as resolve order is not deterministric in webpack
// and we end up with CSS rules not applied,
// see https://github.com/webpack/webpack/issues/215
@import "./vendor/media";

$desktop-sidebar-width: 275px;
$widedesktop-sidebar-width: 275px;
$bottom-player-height: 4rem;

html,
body {
  @include media("<=desktop") {
    font-size: 90%;
  }
}

html {
  scroll-behavior: smooth;
}
@media screen and (prefers-reduced-motion: reduce) {
	html {
		scroll-behavior: auto;
	}
}
#app {
  font-family: "Avenir", Helvetica, Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: flex;
  min-height: 100vh;
  flex-direction: column;
  padding-bottom: $bottom-player-height;
}

#app > main, #app > .main {
  flex: 1;
}

.instance-chooser {
  margin-top: 2em;
}

.ui.wide.left.sidebar {
  @include media(">desktop") {
    width: $desktop-sidebar-width;
  }

  @include media(">widedesktop") {
    width: $widedesktop-sidebar-width;
  }
}

#app {
  > .main.pusher,
  > .footer {
    @include media(">desktop") {
      margin-left: $desktop-sidebar-width !important;
    }

    @include media(">widedesktop") {
      margin-left: $widedesktop-sidebar-width !important;;
    }
    transform: none !important;
  }
}

.main.pusher.hidden {
  display: none;
}
.main.pusher > .ui.secondary.menu {
  margin-left: 0;
  margin-right: 0;
  border: none;
  overflow-y: auto;
  .ui.item {
    border: none;
    border-bottom-style: none;
    margin-bottom: 0px;
  }
  @include media(">tablet") {
    padding: 0 2.5rem;
  }
  .item {
    padding-top: 1.5em;
    padding-bottom: 1.5em;
  }
}

.service-messages {
  position: fixed;
  bottom: 1em;
  left: 1em;
  @include media("<desktop") {
    bottom: $bottom-player-height + 0.5rem;
  }
  @include media(">desktop") {
    left: $desktop-sidebar-width;
  }
  @include media(">widedesktop") {
    left: $widedesktop-sidebar-width;
  }
  > .ui.message {
    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.7);
  }
}
.main-pusher {
  padding: 1.5rem 0;
}
.ui.stripe.segment,
#footer {
  padding: 1em;
  @include media(">tablet") {
    padding: 2em;
  }
  @include media(">widedesktop") {
    padding: 3em;
  }
}

.ellipsis:not(.icon) {
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.ui.small.text.container {
  max-width: 500px !important;
}

.button.icon.tiny {
  padding: 0.5em !important;
}

.sidebar {
  .logo {
    &.bordered.icon {
      padding: .5em .41em !important;
    }
    path {
      fill: white;
    }
  }
  .tab {
    flex-direction: column;
  }
}

.link {
  cursor: pointer;
}

.ui.really.basic.button {
  &:not(:focus) {
    box-shadow: none !important;
    background-color: none !important;
  }
}

.floated.buttons .button ~ .dropdown {
  border-left: none;
}

.ui.icon.header .circular.icon {
  display: flex;
  justify-content: center;
}

.header-buttons > .buttons {
  display: inline-block;
  padding: 0.2em;
  margin: 0;
  font-size: 1em;
  .buttons {
    margin: 0;
  }

}

a {
  cursor: pointer;
}
.segment.hidden {
  display: none;
}

.nomargin {
  margin: 0 !important;
}
button.reset {
  border: none;
  margin: 0;
  padding: 0;
  width: auto;
  overflow: visible;

  background: transparent;

  /* inherit font & color from ancestor */
  color: inherit;
  font: inherit;

  /* Normalize `line-height`. Cannot be changed from `normal` in Firefox 4+. */
  line-height: normal;

  /* Corrects font smoothing for webkit */
  -webkit-font-smoothing: inherit;
  -moz-osx-font-smoothing: inherit;
  /* Corrects inability to style clickable `input` types in iOS */
  -webkit-appearance: none;
  text-align: inherit;
}

.ui.table > caption {
  font-weight: bold;
  padding: 0.5em;
  text-align: left;
}
[role="button"] {
  cursor: pointer;
}

.left.floated {
  float: left;
}

.right.floated {
  float: right;
}


[data-tooltip]::after {
  white-space: normal;
  width: 500px;
  max-width: 500px;
  z-index: 999;
}

label .tooltip {
  margin-left: 1em;
}

.ui.list .list.icon {
  padding-left: 0;
}


.ui.dropdown .item[disabled] {
  display: none;
}

span.diff.added {
  background-color:rgba(0, 255, 0, 0.25);
}


span.diff.removed {
  background-color: rgba(255, 0, 0, 0.25);
}

.table-wrapper {
  display: block;
  overflow-x: auto;
}

td.align.right {
  text-align: right;
}

.ui.pagination.menu {
  margin-top: 1em;
  + span {
    margin-left: 1em;
  }
}

.card .description {
  word-wrap: break-word;
}

.ui.cards > .flat.card, .flat.card {
  box-shadow: none;
  .content {
    border: none;
  }
}

.ui.cards > .inline.card {
  flex-direction: row;
  .content {
    padding: 0.5em 0.75em;
  }
}

.ui.checkbox label {
  cursor: pointer;
}

input + .help {
  margin-top: 0.5em;
}

.tag-list {
  margin-top: 0.5em;
}

.expandable {
  &:not(.expanded) {
    overflow: hidden;
    max-height: 15vh;
    background: linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 90%, rgba(0, 0, 0, 0.3) 100%);
  }
}

.ui.borderless.button {
  border: none !important;
  box-shadow: none !important;
  padding-left: 0;
  padding-right: 0;
}
.column .ui.text.container {
  max-width: 100% !important;
}

.ui.small.divider {
  margin: 0.5rem 0;
}

.queue.segment.player-focused #queue-grid #player {
  @include media("<desktop") {
    padding-bottom: $bottom-player-height;
  }
}
.queue-controls {

  @include media("<desktop") {
    height: $bottom-player-height;
  }
}

.desktop-and-up {
  @include media("<desktop") {
    display: none !important;
  }
}
.tablet-and-up {
  @include media("<tablet") {
    display: none !important;
  }
}
.tablet-and-below {
  @include media(">desktop") {
    display: none !important;
  }
}
@import "./themes/_light.scss";
@import "./themes/_dark.scss";

